--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,12 @@
   <link href="https://unpkg.com/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container py-4">
-    <h1>Import 2Bhip Inventory</h1>
-    <label for="file">Choose file to upload</label>
+  <div class="container-sm px-5 py-5">
+    <img src="./2Bhip.svg" class="mx-auto d-block" alt="2Bhip" width="291" height="332" />
+    <h4>Inventory Import</h4>
+    <!-- <label for="file">Choose file to upload</label> -->
     <input type="file" class="form-control" name="file" id="file" />
-    <button class="btn btn-primary mt-2" id="submitFile">Upload</button>
+    <button class="btn btn-secondary mt-2" id="submitFile">Upload</button>
     <div class="mt-2" id="csvTable"></div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
@@ -31,7 +32,7 @@
 
     submitFile.addEventListener('click', function () {
       if (!file || file.type !== 'text/plain') {
-        alert('Please choose a TXT file')
+        alert('Please select the ShipStation -> Insights -> Reports -> Inventory Status Report -> TXT file')
         return
       }
 
